--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -27,6 +27,7 @@
 
     "settings_general_title": "General settings",
     "settings_general_language": "Language",
+    "settings_general_theme": "Dark Mode", 
     "settings_general_apiKey": "OpenAI API Key",
     "settings_general_maxMessages": "Maximum number of messages in prompt",
     "settings_general_maxMessages_tooltip": "If the value is 0, it will be automatically calculated based on the max_tokens",
