--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -79,6 +79,7 @@
     "chat_menu_collapseAll": "Collapse all messages",
     "chat_menu_removeAll": "Remove all messages from prompt",
     "chat_menu_recalulator": "Recalculate which message in prompt",
+    "chat_menu_share": "Share your messages",
 
     "chat_settings_title": "Custom This Chat Settings",
     "chat_settings_maxMessages": "Limit the number of messages in the prompt context",
