--- a/src/webview/i18n/en.json
+++ b/src/webview/i18n/en.json
@@ -107,6 +107,13 @@
     "expand": "expand",
     "collapse": "collapse",
 
-    "chat_input_tooltip": "Press Enter to send message, Shift+Enter to new line"
+    "chat_input_tooltip": "Press Enter to send message, Shift+Enter to new line",
+    "chat_history_noData": "No Chat History",
+
+    "func_intro_1": "Local conversation history storage.",
+    "func_intro_2": "Control over the message in the prompt for freedom.",
+    "func_intro_3": "Each chat can be independently configured.",
+    "func_intro_4": "Flexible calculation of tokens and saves you costs.",
+    "func_intro_5": "Using prompt action in a conversation and more..."
   }
 }
