--- a/src/webview/i18n/zh.json
+++ b/src/webview/i18n/zh.json
@@ -109,7 +109,14 @@
     "expand": "展开",
     "collapse": "收起",
 
-    "chat_input_tooltip": "按下 Enter 发送消息，Enter+Shift 换行"
+    "chat_input_tooltip": "按下 Enter 发送消息，Enter+Shift 换行",
+    "chat_history_noData": "无会话历史",
+
+    "func_intro_1": "本地的会话历史存储",
+    "func_intro_2": "自由的控制信息是否在prompt上下文中",
+    "func_intro_3": "每个会话可进行独立设置",
+    "func_intro_4": "计算掌握tokens，节约你的花费",
+    "func_intro_5": "更多功能..."
 
   }
 }
