--- a/src/webview/i18n/en.json
+++ b/src/webview/i18n/en.json
@@ -105,6 +105,17 @@
     "cancel": "Cancel",
     "confirm": "Confirm",
     "expand": "expand",
-    "collapse": "collapse"
+    "collapse": "collapse",
+
+    "chat_input_tooltip": "Press Enter to send message, Shift+Enter to new line",
+    "chat_history_noData": "No Chat History",
+
+    "app_intro": "Making things easy with OpenAI ChatGPT",
+
+    "func_intro_1": "Local conversation history storage.",
+    "func_intro_2": "Control over the message in the prompt for freedom.",
+    "func_intro_3": "Each chat can be independently configured.",
+    "func_intro_4": "Flexible calculation of tokens and saves you costs.",
+    "func_intro_5": "Using prompt action in a conversation and more..."
   }
 }
